Fixed text alignment

--- a/css/tyokokemus.css
+++ b/css/tyokokemus.css
@@ -25,7 +25,6 @@ main div {
 main article {
   display: flex;
   flex-direction: column;
-  align-items: center;
   border-radius: 15px;
   background-color: #303030;
   max-width: 65%;
